// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract-units should be able to extract en 1`] = `
Object {
  "en": Object {
    "acre": Object {
      "displayName": "acres",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "acre",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "acres",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "ac",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "ac",
        },
      },
    },
    "bit": Object {
      "displayName": "bits",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "bit",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "bits",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "bit",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "bit",
        },
      },
    },
    "byte": Object {
      "displayName": "bytes",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "byte",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "bytes",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "B",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "byte",
        },
      },
    },
    "celsius": Object {
      "displayName": "degrees Celsius",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "degree Celsius",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "degrees Celsius",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "°C",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "°C",
        },
      },
    },
    "centimeter": Object {
      "displayName": "centimeters",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "centimeter",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "centimeters",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "cm",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "cm",
        },
      },
    },
    "day": Object {
      "displayName": "days",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "day",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "days",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "d",
        },
      },
      "short": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "day",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "days",
        },
      },
    },
    "degree": Object {
      "displayName": "degrees",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "degree",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "degrees",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "°",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "deg",
        },
      },
    },
    "fahrenheit": Object {
      "displayName": "degrees Fahrenheit",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "degree Fahrenheit",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "degrees Fahrenheit",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "°",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "°F",
        },
      },
    },
    "fluid-ounce": Object {
      "displayName": "fluid ounces",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "fluid ounce",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "fluid ounces",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "fl oz",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "fl oz",
        },
      },
    },
    "foot": Object {
      "displayName": "feet",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "foot",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "feet",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "′",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "ft",
        },
      },
    },
    "gallon": Object {
      "displayName": "gallons",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "gallon",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "gallons",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "gal",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "gal",
        },
      },
    },
    "gigabit": Object {
      "displayName": "gigabits",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "gigabit",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "gigabits",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "Gb",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "Gb",
        },
      },
    },
    "gigabyte": Object {
      "displayName": "gigabytes",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "gigabyte",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "gigabytes",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "GB",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "GB",
        },
      },
    },
    "gram": Object {
      "displayName": "grams",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "gram",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "grams",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "g",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "g",
        },
      },
    },
    "hectare": Object {
      "displayName": "hectares",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "hectare",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "hectares",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "ha",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "ha",
        },
      },
    },
    "hour": Object {
      "displayName": "hours",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "hour",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "hours",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "h",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "hr",
        },
      },
    },
    "inch": Object {
      "displayName": "inches",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "inch",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "inches",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "″",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "in",
        },
      },
    },
    "kilobit": Object {
      "displayName": "kilobits",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "kilobit",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "kilobits",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "kb",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "kb",
        },
      },
    },
    "kilobyte": Object {
      "displayName": "kilobytes",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "kilobyte",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "kilobytes",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "kB",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "kB",
        },
      },
    },
    "kilogram": Object {
      "displayName": "kilograms",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "kilogram",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "kilograms",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "kg",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "kg",
        },
      },
    },
    "kilometer": Object {
      "displayName": "kilometers",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "kilometer",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "kilometers",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "km",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "km",
        },
      },
    },
    "liter": Object {
      "displayName": "liters",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "liter",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "liters",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "L",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "L",
        },
      },
    },
    "megabit": Object {
      "displayName": "megabits",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "megabit",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "megabits",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "Mb",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "Mb",
        },
      },
    },
    "megabyte": Object {
      "displayName": "megabytes",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "megabyte",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "megabytes",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "MB",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "MB",
        },
      },
    },
    "meter": Object {
      "displayName": "meters",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "meter",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "meters",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "m",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "m",
        },
      },
    },
    "mile": Object {
      "displayName": "miles",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "mile",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "miles",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "mi",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "mi",
        },
      },
    },
    "mile-scandinavian": Object {
      "displayName": "mile-scandinavian",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "mile-scandinavian",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "miles-scandinavian",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "smi",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "smi",
        },
      },
    },
    "milliliter": Object {
      "displayName": "milliliters",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "milliliter",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "milliliters",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "mL",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "mL",
        },
      },
    },
    "millimeter": Object {
      "displayName": "millimeters",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "millimeter",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "millimeters",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "mm",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "mm",
        },
      },
    },
    "millisecond": Object {
      "displayName": "milliseconds",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "millisecond",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "milliseconds",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "ms",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "ms",
        },
      },
    },
    "minute": Object {
      "displayName": "minutes",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "minute",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "minutes",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "m",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "min",
        },
      },
    },
    "month": Object {
      "displayName": "months",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "month",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "months",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "m",
        },
      },
      "short": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "mth",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "mths",
        },
      },
    },
    "ounce": Object {
      "displayName": "ounces",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "ounce",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "ounces",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "oz",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "oz",
        },
      },
    },
    "percent": Object {
      "displayName": "percent",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "percent",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "%",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "%",
        },
      },
    },
    "petabyte": Object {
      "displayName": "petabytes",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "petabyte",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "petabytes",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "PB",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "PB",
        },
      },
    },
    "pound": Object {
      "displayName": "pounds",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "pound",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "pounds",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "#",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "lb",
        },
      },
    },
    "second": Object {
      "displayName": "seconds",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "second",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "seconds",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "s",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "sec",
        },
      },
    },
    "stone": Object {
      "displayName": "stones",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "stone",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "stones",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "st",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "st",
        },
      },
    },
    "terabit": Object {
      "displayName": "terabits",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "terabit",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "terabits",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "Tb",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "Tb",
        },
      },
    },
    "terabyte": Object {
      "displayName": "terabytes",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "terabyte",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "terabytes",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "TB",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "TB",
        },
      },
    },
    "week": Object {
      "displayName": "weeks",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "week",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "weeks",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "w",
        },
      },
      "short": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "wk",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "wks",
        },
      },
    },
    "yard": Object {
      "displayName": "yards",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "yard",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "yards",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "yd",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "yd",
        },
      },
    },
    "year": Object {
      "displayName": "years",
      "long": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "year",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "years",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "y",
        },
      },
      "short": Object {
        "one": Object {
          "pattern": "{0} {1}",
          "symbol": "yr",
        },
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "yrs",
        },
      },
    },
  },
}
`;

exports[`extract-units should be able to extract vi 1`] = `
Object {
  "vi": Object {
    "acre": Object {
      "displayName": "mẫu",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "mẫu",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "mẫu",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "mẫu",
        },
      },
    },
    "bit": Object {
      "displayName": "bit",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "bit",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "bit",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "bit",
        },
      },
    },
    "byte": Object {
      "displayName": "byte",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "byte",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "byte",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "byte",
        },
      },
    },
    "celsius": Object {
      "displayName": "độ C",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "độ C",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "°C",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "°C",
        },
      },
    },
    "centimeter": Object {
      "displayName": "xentimét",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "xentimét",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "cm",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "cm",
        },
      },
    },
    "day": Object {
      "displayName": "ngày",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "ngày",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "ngày",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "ngày",
        },
      },
    },
    "degree": Object {
      "displayName": "độ",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "độ",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "°",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "°",
        },
      },
    },
    "fahrenheit": Object {
      "displayName": "độ F",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "độ F",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "°F",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "°F",
        },
      },
    },
    "fluid-ounce": Object {
      "displayName": "aoxơ chất lỏng",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "aoxơ chất lỏng",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "fl oz",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "fl oz",
        },
      },
    },
    "foot": Object {
      "displayName": "feet",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "feet",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "'",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "ft",
        },
      },
    },
    "gallon": Object {
      "displayName": "gallon",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "gallon",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "gal",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "gal",
        },
      },
    },
    "gigabit": Object {
      "displayName": "gigabit",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "gigabit",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "Gb",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "Gb",
        },
      },
    },
    "gigabyte": Object {
      "displayName": "gigabyte",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "gigabyte",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "GB",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "GB",
        },
      },
    },
    "gram": Object {
      "displayName": "gam",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "gam",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "g",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "g",
        },
      },
    },
    "hectare": Object {
      "displayName": "héc-ta",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "héc-ta",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "ha",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "ha",
        },
      },
    },
    "hour": Object {
      "displayName": "giờ",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "giờ",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "giờ",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "giờ",
        },
      },
    },
    "inch": Object {
      "displayName": "inch",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "inch",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "\\\\\\"",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "inch",
        },
      },
    },
    "kilobit": Object {
      "displayName": "kilobit",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "kilobit",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "kb",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "kb",
        },
      },
    },
    "kilobyte": Object {
      "displayName": "kilobyte",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "kilobyte",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "kB",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "kB",
        },
      },
    },
    "kilogram": Object {
      "displayName": "kilôgam",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "kilôgam",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "kg",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "kg",
        },
      },
    },
    "kilometer": Object {
      "displayName": "kilômét",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "kilômét",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "km",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "km",
        },
      },
    },
    "liter": Object {
      "displayName": "lít",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "lít",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "L",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "L",
        },
      },
    },
    "megabit": Object {
      "displayName": "megabit",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "megabit",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "Mb",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "Mb",
        },
      },
    },
    "megabyte": Object {
      "displayName": "megabyte",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "megabyte",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "MB",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "MB",
        },
      },
    },
    "meter": Object {
      "displayName": "mét",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "mét",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "m",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "m",
        },
      },
    },
    "mile": Object {
      "displayName": "dặm",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "dặm",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "mi",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "dặm",
        },
      },
    },
    "mile-scandinavian": Object {
      "displayName": "dặm scandinavia",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "dặm scandinavia",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "smi",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "smi",
        },
      },
    },
    "milliliter": Object {
      "displayName": "mililít",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "mililít",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "mL",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "mL",
        },
      },
    },
    "millimeter": Object {
      "displayName": "milimét",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "milimét",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "mm",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "mm",
        },
      },
    },
    "millisecond": Object {
      "displayName": "mili giây",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "mili giây",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "miligiây",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "mili giây",
        },
      },
    },
    "minute": Object {
      "displayName": "phút",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "phút",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "phút",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "phút",
        },
      },
    },
    "month": Object {
      "displayName": "tháng",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "tháng",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "tháng",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "tháng",
        },
      },
    },
    "ounce": Object {
      "displayName": "aoxơ",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "aoxơ",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "oz",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "oz",
        },
      },
    },
    "percent": Object {
      "displayName": "%",
      "long": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "%",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "%",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "%",
        },
      },
    },
    "petabyte": Object {
      "displayName": "petabyte",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "PB",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "PB",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "PB",
        },
      },
    },
    "pound": Object {
      "displayName": "pao",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "pao",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "lb",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "lb",
        },
      },
    },
    "second": Object {
      "displayName": "giây",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "giây",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "giây",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "giây",
        },
      },
    },
    "stone": Object {
      "displayName": "st",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "st",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "st",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "st",
        },
      },
    },
    "terabit": Object {
      "displayName": "terabit",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "terabit",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "Tb",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "Tb",
        },
      },
    },
    "terabyte": Object {
      "displayName": "terabyte",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "terabyte",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "TB",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "TB",
        },
      },
    },
    "week": Object {
      "displayName": "tuần",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "tuần",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "tuần",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "tuần",
        },
      },
    },
    "yard": Object {
      "displayName": "yard",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "yard",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0}{1}",
          "symbol": "yd",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "yd",
        },
      },
    },
    "year": Object {
      "displayName": "năm",
      "long": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "năm",
        },
      },
      "narrow": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "năm",
        },
      },
      "short": Object {
        "other": Object {
          "pattern": "{0} {1}",
          "symbol": "năm",
        },
      },
    },
  },
}
`;
